@@ -1,14 +1,57 @@
+var docCookies = {
+    getItem: function (sKey) {
+        if (!sKey) { return null; }
+        return decodeURIComponent(document.cookie.replace(new RegExp("(?:(?:^|.*;)\\s*" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=\\s*([^;]*).*$)|^.*$"), "$1")) || null;
+    },
+    setItem: function (sKey, sValue, vEnd, sPath, sDomain, bSecure) {
+        if (!sKey || /^(?:expires|max\-age|path|domain|secure)$/i.test(sKey)) { return false; }
+        var sExpires = "";
+        if (vEnd) {
+            switch (vEnd.constructor) {
+                case Number:
+                    sExpires = vEnd === Infinity ? "; expires=Fri, 31 Dec 9999 23:59:59 GMT" : "; max-age=" + vEnd;
+                    break;
+                case String:
+                    sExpires = "; expires=" + vEnd;
+                    break;
+                case Date:
+                    sExpires = "; expires=" + vEnd.toUTCString();
+                    break;
+            }
+        }
+        document.cookie = encodeURIComponent(sKey) + "=" + encodeURIComponent(sValue) + sExpires + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "") + (bSecure ? "; secure" : "");
+        return true;
+    },
+    removeItem: function (sKey, sPath, sDomain) {
+        if (!this.hasItem(sKey)) { return false; }
+        document.cookie = encodeURIComponent(sKey) + "=; expires=Thu, 01 Jan 1970 00:00:00 GMT" + (sDomain ? "; domain=" + sDomain : "") + (sPath ? "; path=" + sPath : "");
+        return true;
+    },
+    hasItem: function (sKey) {
+        if (!sKey) { return false; }
+        return (new RegExp("(?:^|;\\s*)" + encodeURIComponent(sKey).replace(/[\-\.\+\*]/g, "\\$&") + "\\s*\\=")).test(document.cookie);
+    },
+    keys: function () {
+        var aKeys = document.cookie.replace(/((?:^|\s*;)[^\=]+)(?=;|$)|^\s*|\s*(?:\=[^;]*)?(?:\1|$)/g, "").split(/\s*(?:\=[^;]*)?;\s*/);
+        for (var nLen = aKeys.length, nIdx = 0; nIdx < nLen; nIdx++) { aKeys[nIdx] = decodeURIComponent(aKeys[nIdx]); }
+        return aKeys;
+    }
+};
 var MessageBoard = {
 
     messages: [],
     textField: null,
     messageArea: null,
+    lastSeen: docCookies.getItem("lastSeen"),
 
     init: function (e) {
 
         MessageBoard.textField = $("#inputText");
         MessageBoard.nameField = $("#inputName");
         MessageBoard.messageArea = $("#messagearea");
+        console.log(MessageBoard.textField);
+        console.log(MessageBoard.nameField);
+        console.log(MessageBoard.messageArea);
 
         // Add eventhandlers
         document.getElementById("inputText").onfocus = function (e) {
@@ -42,27 +85,48 @@ var MessageBoard = {
         $.ajax({
             dataType:"json",
             type: "GET",
+            async: true,
             url: "functions.php",
-            data: {function: "getMessages"}
-        }).done(function (data) { // called when the AJAX call is ready
-
+            timeout:50000,
+            data: {function: "getMessages", lastSeen: MessageBoard.lastSeen || 0},
+            success: function(data){
+                console.log(data);
+                //data = JSON.parse(data);
+                for (var mess in data) {
+                    MessageBoard.lastSeen = data[mess]["serial"];
+                    docCookies.setItem("lastSeen", MessageBoard.lastSeen, 0);
+                    console.log(MessageBoard.lastSeen);
+                    var obj = data[mess];
+                    var text = obj.name + " said:\n" + obj.message;
+                    var mess = new Message(text, new Date());
+                    var messageID = MessageBoard.messages.push(mess) - 1;
+                    console.log(MessageBoard.messages);
+                    MessageBoard.renderMessage(messageID);
+                }
+                document.getElementById("nrOfMessages").innerHTML = MessageBoard.messages.length;
+                setTimeout(MessageBoard.getMessages, 200);
+            },
+            error: function(jqXHR, textStatus, errorThrown){
+                //alert("error" + textStatus + errorThrown);
+                setTimeout(MessageBoard.getMessages, 2000);
+            }
+        });/*.done(function (data) { // called when the AJAX call is ready
+            console.log(data);
             //data = JSON.parse(data);
-
-
             for (var mess in data) {
+                MessageBoard.lastSeen = data[mess]["serial"];
+                console.log(MessageBoard.lastSeen);
                 var obj = data[mess];
                 var text = obj.name + " said:\n" + obj.message;
                 var mess = new Message(text, new Date());
                 var messageID = MessageBoard.messages.push(mess) - 1;
-
+                console.log(MessageBoard.messages);
                 MessageBoard.renderMessage(messageID);
 
             }
             document.getElementById("nrOfMessages").innerHTML = MessageBoard.messages.length;
 
-        });
-
-
+        });*/
     },
     sendMessage: function () {
 
@@ -72,25 +136,26 @@ var MessageBoard = {
         $.ajax({
             type: "POST",
             url: "functions.php",
-            data: "function=add&name="+MessageBoard.nameField.value+"&message="+MessageBoard.textField.value,
-            success: function(msg){
-                //alert("wow"+msg);
+            data: {"function":"add","name":MessageBoard.nameField[0].value, "message":MessageBoard.textField[0].value, "csrf_token":document.getElementById("csrf_token").value},
+            success: function(msg, textstatus, jqXHR){
+                console.log(MessageBoard.nameField);
+                console.log(MessageBoard);
             },
             error: function(msg, textStatus, errorThrown){
                 alert("The message was not saved because of a " + errorThrown + " error.");
                 console.log(msg, textStatus, errorThrown);
             }
         }).done(function (data) {
-            alert(data);
-            $("#messagearea").prepend('<div class="message">' +
-                '<a href="#" class="clock">' +
-                     +
-                '</a>' +
+            MessageBoard.nameField[0].value = "";
+            MessageBoard.textField[0].value = "";
+            //alert(data);
+            /*$("#messagearea").prepend('<div class="message">' +
+                '<a href="#" class="clock">' + '</a>' +
                 '<p>'+MessageBoard.nameField.value+' said:<br>'+MessageBoard.textField.value+'</p>' +
                 '<span>13:41:01</span>' +
                 '<span class="clear"></span>' +
-            '</div>');
-            alert("Your message is saved! Reload the page for watching it");
+            '</div>');*/
+            //alert("Your message is saved! Reload the page for watching it");
         });
 
     },
@@ -101,6 +166,7 @@ var MessageBoard = {
         // Renders all messages.
         for (var i = 0; i < MessageBoard.messages.length; ++i) {
             MessageBoard.renderMessage(i);
+            MessageBoard.lastSeen = i;
         }
 
         document.getElementById("nrOfMessages").innerHTML = MessageBoard.messages.length;
@@ -165,5 +231,3 @@ var MessageBoard = {
         window.location = "index.php";
     }
 }
-
-window.onload = MessageBoard.init;
